# kibble

./: .gitignore  README.md
app/: index.html  package.json  pnpm-lock.yaml
app/src/: main.ts  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: config.rs  git.rs  ingest.rs  main.rs
app/src/assets/cat/: README.md
skill/: SKILL.md  generate_diet_report.py  generate_report.py  parse_apple_health.py
