[package]
name = "kibble"
version = "0.1.0"
description = "A pixel cat that eats your food photos."
authors = ["Tom"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
